--- a/src/main/LoliCCompiler.form
+++ b/src/main/LoliCCompiler.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="5" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="1191" height="837"/>
+      <xy x="20" y="20" width="1267" height="837"/>
     </constraints>
     <properties/>
     <border type="bevel-raised"/>
@@ -36,16 +36,6 @@
         </constraints>
         <properties>
           <text value="PrettyPrinter"/>
-        </properties>
-      </component>
-      <component id="2b4b" class="javax.swing.JButton" binding="printASTButton" default-binding="true">
-        <constraints>
-          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="80" height="36"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="PrintAST"/>
         </properties>
       </component>
       <component id="7894f" class="javax.swing.JButton" binding="openButton" default-binding="true">
@@ -87,11 +77,6 @@
           </model>
         </properties>
       </component>
-      <vspacer id="e5d92">
-        <constraints>
-          <grid row="3" column="1" row-span="2" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
-        </constraints>
-      </vspacer>
       <scrollpane id="8864d">
         <constraints>
           <grid row="0" column="5" row-span="5" col-span="1" vsize-policy="7" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
@@ -109,6 +94,75 @@
           </component>
         </children>
       </scrollpane>
+      <component id="b2ce6" class="javax.swing.JButton" binding="semanticButton">
+        <constraints>
+          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="80" height="36"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="SemanticCheck"/>
+        </properties>
+      </component>
+      <grid id="16bb9" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+        <margin top="0" left="0" bottom="0" right="0"/>
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+        </properties>
+        <border type="bevel-lowered">
+          <title-color color="-4473925"/>
+        </border>
+        <children>
+          <component id="c4a2" class="javax.swing.JLabel">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <font size="24" style="1"/>
+              <text value="Compiler Message"/>
+            </properties>
+          </component>
+          <vspacer id="37383">
+            <constraints>
+              <grid row="1" column="2" row-span="2" col-span="1" vsize-policy="2" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+            </constraints>
+          </vspacer>
+          <scrollpane id="2dd0f">
+            <constraints>
+              <grid row="1" column="0" row-span="2" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties/>
+            <border type="none"/>
+            <children>
+              <component id="8468b" class="javax.swing.JTextArea" binding="compilerMessage">
+                <constraints/>
+                <properties>
+                  <editable value="false"/>
+                  <lineWrap value="true"/>
+                </properties>
+              </component>
+            </children>
+          </scrollpane>
+        </children>
+      </grid>
+      <hspacer id="8bbe1">
+        <constraints>
+          <grid row="2" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+      </hspacer>
+      <component id="2b4b" class="javax.swing.JButton" binding="printASTButton" default-binding="true">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="80" height="36"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="PrintAST"/>
+        </properties>
+      </component>
       <component id="95040" class="javax.swing.JButton" binding="originalButton" default-binding="true">
         <constraints>
           <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
@@ -119,23 +173,6 @@
           <text value="Original"/>
         </properties>
       </component>
-      <component id="b2ce6" class="javax.swing.JButton" binding="semanticButton">
-        <constraints>
-          <grid row="3" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties>
-          <text value="SemanticCheck"/>
-        </properties>
-      </component>
-      <grid id="16bb9" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
-        <margin top="0" left="0" bottom="0" right="0"/>
-        <constraints>
-          <grid row="4" column="2" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
-        </constraints>
-        <properties/>
-        <border type="none"/>
-        <children/>
-      </grid>
     </children>
   </grid>
 </form>
