--- a/src/main/LoliCCompiler.form
+++ b/src/main/LoliCCompiler.form
@@ -11,7 +11,7 @@
       <component id="67604" class="javax.swing.JTextField" binding="textField1" default-binding="true">
         <constraints>
           <grid row="0" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="7" anchor="8" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="100" height="-1"/>
+            <preferred-size width="200" height="-1"/>
           </grid>
         </constraints>
         <properties>
@@ -78,7 +78,7 @@
       <scrollpane id="8864d">
         <constraints>
           <grid row="0" column="5" row-span="8" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <minimum-size width="500" height="400"/>
+            <minimum-size width="600" height="800"/>
           </grid>
         </constraints>
         <properties>
@@ -173,7 +173,9 @@
       </component>
       <hspacer id="8bbe1">
         <constraints>
-          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="80" height="-1"/>
+          </grid>
         </constraints>
       </hspacer>
       <component id="b3582" class="javax.swing.JButton" binding="interpreterButton">
