--- a/src/main/LoliCCompiler.form
+++ b/src/main/LoliCCompiler.form
@@ -265,6 +265,17 @@
           <text value="BasicGen"/>
         </properties>
       </component>
+      <component id="5e633" class="javax.swing.JButton" binding="randomSpillButton" default-binding="true">
+        <constraints>
+          <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="80" height="36"/>
+          </grid>
+        </constraints>
+        <properties>
+          <enabled value="true"/>
+          <text value="RandomSpill"/>
+        </properties>
+      </component>
     </children>
   </grid>
 </form>
