--- a/src/main/LoliCCompiler.form
+++ b/src/main/LoliCCompiler.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="main.LoliCCompiler">
-  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="12" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="panel" layout-manager="GridLayoutManager" row-count="13" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
       <xy x="20" y="20" width="1267" height="837"/>
@@ -16,16 +16,6 @@
         </constraints>
         <properties>
           <text value="D:\4415 编译原理 MS109\Demos2\FuncPtr1.c"/>
-        </properties>
-      </component>
-      <component id="b92e6" class="javax.swing.JButton" binding="uglyPrinterButton" default-binding="true">
-        <constraints>
-          <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="1" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="40" height="36"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="UglyPrinter"/>
         </properties>
       </component>
       <component id="82e6c" class="javax.swing.JButton" binding="prettyPrinterButton" default-binding="true">
@@ -77,7 +67,7 @@
       </component>
       <scrollpane id="8864d">
         <constraints>
-          <grid row="0" column="5" row-span="12" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
+          <grid row="0" column="5" row-span="13" col-span="1" vsize-policy="6" hsize-policy="6" anchor="0" fill="3" indent="0" use-parent-layout="false">
             <minimum-size width="600" height="800"/>
           </grid>
         </constraints>
@@ -110,7 +100,7 @@
       <grid id="16bb9" layout-manager="GridLayoutManager" row-count="3" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <grid row="11" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="12" column="0" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <enabled value="true"/>
@@ -188,16 +178,6 @@
           <text value="Interpreter..."/>
         </properties>
       </component>
-      <component id="6985d" class="javax.swing.JButton" binding="oldBuggyCheckButton" default-binding="true">
-        <constraints>
-          <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="40" height="36"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="OldBuggyCheck"/>
-        </properties>
-      </component>
       <component id="c6c3a" class="javax.swing.JButton" binding="IRButton" default-binding="true">
         <constraints>
           <grid row="5" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
@@ -206,16 +186,6 @@
         </constraints>
         <properties>
           <text value="IR"/>
-        </properties>
-      </component>
-      <component id="46b8" class="javax.swing.JButton" binding="CFGButton" default-binding="true">
-        <constraints>
-          <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="40" height="36"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="CFG"/>
         </properties>
       </component>
       <component id="873a9" class="javax.swing.JLabel" binding="warning">
@@ -234,29 +204,9 @@
           <text value="我要报警！！！"/>
         </properties>
       </component>
-      <component id="f470c" class="javax.swing.JButton" binding="SSAButton" default-binding="true">
-        <constraints>
-          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="40" height="36"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="SSA"/>
-        </properties>
-      </component>
-      <component id="d7d6d" class="javax.swing.JButton" binding="livenessButton" default-binding="true">
-        <constraints>
-          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="40" height="36"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Liveness"/>
-        </properties>
-      </component>
       <component id="200ef" class="javax.swing.JButton" binding="basicGenButton" default-binding="true">
         <constraints>
-          <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="-1" height="36"/>
             <preferred-size width="80" height="36"/>
           </grid>
@@ -265,20 +215,9 @@
           <text value="BasicGen"/>
         </properties>
       </component>
-      <component id="5e633" class="javax.swing.JButton" binding="randomSpillButton" default-binding="true">
-        <constraints>
-          <grid row="9" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="80" height="36"/>
-          </grid>
-        </constraints>
-        <properties>
-          <enabled value="true"/>
-          <text value="RandomSpill"/>
-        </properties>
-      </component>
       <component id="5ccb" class="javax.swing.JButton" binding="advancedGenButton" default-binding="true">
         <constraints>
-          <grid row="10" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="11" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <minimum-size width="80" height="36"/>
           </grid>
         </constraints>
@@ -286,35 +225,74 @@
           <text value="AdvancedGen"/>
         </properties>
       </component>
-      <component id="20e6a" class="javax.swing.JButton" binding="subexpressionButton" default-binding="true">
+      <component id="46b8" class="javax.swing.JButton" binding="CFGButton" default-binding="true">
         <constraints>
-          <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <minimum-size width="80" height="36"/>
+          <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="40" height="36"/>
           </grid>
         </constraints>
         <properties>
-          <text value="Subexpression"/>
+          <text value="CFG"/>
         </properties>
       </component>
-      <component id="9eb62" class="javax.swing.JButton" binding="deadeliminateButton">
+      <component id="a8a40" class="javax.swing.JButton" binding="edgeSplitButton" default-binding="true">
         <constraints>
-          <grid row="8" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="6" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="80" height="36"/>
           </grid>
         </constraints>
         <properties>
-          <enabled value="true"/>
-          <text value="DeadElimination"/>
+          <text value="EdgeSplit"/>
+        </properties>
+      </component>
+      <component id="f470c" class="javax.swing.JButton" binding="SSAButton" default-binding="true">
+        <constraints>
+          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="40" height="36"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="SSA"/>
+        </properties>
+      </component>
+      <component id="dc2fd" class="javax.swing.JButton" binding="SSAedIRButton" default-binding="true">
+        <constraints>
+          <grid row="7" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="80" height="36"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="SSAedIR"/>
+        </properties>
+      </component>
+      <component id="3a655" class="javax.swing.JButton" binding="trampolineGenButton" default-binding="true">
+        <constraints>
+          <grid row="10" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="80" height="36"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="TrampolineGen"/>
         </properties>
       </component>
       <component id="85bd9" class="javax.swing.JButton" binding="optimizedIRButton" default-binding="true">
         <constraints>
-          <grid row="7" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+          <grid row="9" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
             <preferred-size width="80" height="36"/>
           </grid>
         </constraints>
         <properties>
           <text value="OptimizedIR"/>
+        </properties>
+      </component>
+      <component id="d7d6d" class="javax.swing.JButton" binding="livenessButton" default-binding="true">
+        <constraints>
+          <grid row="8" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="40" height="36"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Liveness"/>
         </properties>
       </component>
     </children>
